# ift_coursework_2025

./: .gitignore  README.md  docker-compose.yml
000.Database/SQL/: Dockerfile  create_tables.sql
team_bernoulli/coursework_one/: README.md
team_neyman/: Strategy big data - Function logic.docx  Strategy big data.docx
team_neyman/coursework_one/: Dockerfile  pyproject.toml
team_neyman/coursework_one/a_pipeline/: README.md  main.py
team_neyman/coursework_one/a_pipeline/modules/db_loader/: postgres.py
team_neyman/coursework_one/a_pipeline/modules/factors/: calculate_factors.py
team_neyman/coursework_one/a_pipeline/modules/url_parser/: dolthub_pipeline.py  yf_pipeline.py
team_neyman/coursework_one/a_pipeline/test/: test.py
team_neyman/coursework_one/b_pipeline/: README.md
team_neyman/coursework_one/c_pipeline/: README.md
