[tool.poetry]
name = "coursework-one"
version = "0.1.0"
description = ""
authors = ["TeamOak"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
sqlalchemy = "^2.0.0"
numpy = ">=2.0.0"
spacy = "^3.7.0"
nltk = "^3.8.0"
psycopg = {extras = ["binary"], version = "^3.1.18"}
yfinance = "^0.2.40"
tqdm = "^4.66.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
